correction filtres version mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -654,6 +654,9 @@ a {
     font-size: 11px;
     font-weight: bold;
   }
+  .filter:not(:last-child) {
+    margin-right: 11px;
+  }
   .icon {
     font-size: 15px;
     margin-right: 5px;
